maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:23: error: not found: value PrendBiscuit
PrendBiscuit();	
^